[project]
name = "дз-кравченко-є-л"
version = "0.1.0"
description = ""
authors = [
    {name = "PT40SY",email = "doma27@ukr.net"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
python = ">=3.x.x,<4.0"
